--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "node --experimental-specifier-resolution=node server/index.js",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
