--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
 node_modules
 npm-debug.log
-Dockerfile
-.dockerignore
 .git
 .gitignore
-README.md
 .env
 .env.local
-dist
+.env.*.local
+README.md
+.vscode
+.idea
