--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,23 @@
+# Dependencies
 node_modules
-npm-debug.log
-.git
-.gitignore
+**/node_modules
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
 .env
 .env.local
 .env.*.local
-README.md
+
+# Development
+.git
+.gitignore
 .vscode
 .idea
+README.md
+
+# Build
+dist
