--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-spreadsheet": "^4.1.1",
+    "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
