--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "server": "node server/index.js"
+    "server": "node server/index.js",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
