--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "server": "node server/index.js",
-    "heroku-postbuild": "npm run build"
+    "server": "node server/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
