--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "start": "node server/index.js",
     "server": "node server/index.js",
-    "heroku-postbuild": "heroku-postbuild.bat"
+    "heroku-postbuild": "npm run build && npm run server"
   },
   "dependencies": {
     "cors": "^2.8.5",
