--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "server": "node server/index.js",
-    "heroku-postbuild": "echo 'Build completed'"
+    "server": "node server/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
