--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "server": "node server/index.js"
+    "server": "node server/index.js",
+    "heroku-postbuild": "echo 'Deployment completed'"
   },
   "dependencies": {
     "cors": "^2.8.5",
