--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "xlsx": "^0.18.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "xlsx": "^0.18.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "autoprefixer": "^10.4.18",
     "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.0"
+    "tailwindcss": "^3.4.1"
   }
 }
