--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "autoprefixer": "^10.4.18",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "autoprefixer": "^10.4.18",
     "concurrently": "^8.2.2",
-    "eslint": "^9.9.1",
-    "tailwindcss": "^3.4.1"
+    "eslint": "^9.9.1"
   }
 }
