--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chatbot-server",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend server for chatbot with Google Sheets integration",
   "main": "index.js",
   "scripts": {
@@ -9,10 +10,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "google-spreadsheet": "^4.1.1",
     "google-auth-library": "^9.4.1",
+    "dotenv": "^16.3.1",
     "googleapis": "^129.0.0"
   },
   "devDependencies": {
