--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
     "render-build": "npm install && cd server && npm install && cd .. && npm run build"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "express": "^4.18.3",
@@ -19,14 +27,10 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "xlsx": "^0.18.5",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.0",
-    "autoprefixer": "^10.4.18",
-    "tailwindcss": "^3.4.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
